# Shader-sketch

./: .gitignore  .replit  3D-Model-Painter-v0.1.0-RELEASE_NOTES.md  3D-Model-Painter-v0.2.0-RELEASE_NOTES.md  3DModelPainter  3DModelPainter.nsi  CMakeLists.txt  CMakeLists_msys2.txt  CMakeLists_windows.txt  CONTRIBUTING.md  ColorModelPainter  ColorModelPainter.cpp  EnhancedFunModelPainter  EnhancedFunModelPainter.cpp  EnhancedModelPainter  EnhancedModelPainter.cpp  FunModelPainter  FunModelPainter.cpp  INSTALL.md  MSYS2_README.md  README.md  RELEASE_NOTES_TEMPLATE.md  ShaderSketch_GUI_Simple  SimpleCMakeLists.txt  WindowsBuild.md  build_gui.sh  build_gui_msys2.sh  build_windows.sh  build_with_msys2.sh  color_wheel.h  color_wheel_app.cpp  color_wheel_test  color_wheel_test.cpp  create_app_icon.sh  create_windows_package.sh  easy_install.sh  gui_CMakeLists.txt  gui_interface.cpp  install.bat  install.sh  (+13 more)
3D-Model-Painter/: .gitignore  LICENSE  README.md  package.json
3D-Model-Painter-Color/: README.md  screenshot.txt  setup.sh
3D-Model-Painter-Color/examples/: multi-tool.txt  pattern.txt  simple-brush.txt
3D-Model-Painter/docs/: MANUAL.md  screenshot.txt
3D-Model-Painter/src/: application.h  layer.cpp  layer.h  model.cpp  paint_tool.h  project.h  renderer.h  texture.h
3d_model_painter_project/: simple_app.cpp  simple_gui_app.cpp
3d_model_painter_project/simple_build/: Makefile  SimpleModelPainter.cpp
3d_model_painter_project/src/: application.cpp  camera.h  main.cpp  model.h  shader.cpp  texture.cpp  ui.cpp  ui.h  utils.h
3d_model_painter_project/src/shaders/: basic.frag  paint.frag
ShaderSketch/: CMakeLists.txt  README.md  ShaderSketch_GUI_Simple  build.sh
ShaderSketch/src/: simple_gui.cpp
attached_assets/: Pasted--3D-Model-Painter-Easy-Windows-Installation-Setting-up-your-3D-Model-Painter-application--1745380521491.txt
cmake/: FindOpenGL.cmake
docs/: Color_Wheel.md  Export_Formats.md  GitHub_Releases.md  Project_Organization.md  Windows_Packaging.md  index.md
simple_build/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
src/: camera.cpp  paint_tool.cpp  project.cpp  renderer.cpp  shader.h  utils.cpp
windows_package/: EnhancedModelPainter.cpp  README.txt  WindowsBuild.md  check_releases.sh  create_github_release.sh  create_installer.bat  cube.mtl  run_3d_model_painter.bat  windows_build.bat
